--- a/angular.json
+++ b/angular.json
@@ -18,15 +18,12 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": {
-              "base": "dist/citizenos-fe"
-            },
+            "outputPath": "dist/citizenos-fe",
             "index": "src/index.html",
-            "polyfills": [
-              "src/polyfills.ts"
-            ],
+            "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -47,8 +44,7 @@
                 "src/assets/styles"
               ]
             },
-            "scripts": [],
-            "browser": "src/main.ts"
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -78,7 +74,9 @@
               }
             },
             "development": {
+              "buildOptimizer": false,
               "optimization": false,
+              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
@@ -97,10 +95,10 @@
           },
           "configurations": {
             "production": {
-              "buildTarget": "citizenos-fe:build:production"
+              "browserTarget": "citizenos-fe:build:production"
             },
             "development": {
-              "buildTarget": "citizenos-fe:build:development"
+              "browserTarget": "citizenos-fe:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -108,7 +106,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "citizenos-fe:build"
+            "browserTarget": "citizenos-fe:build"
           }
         },
         "test": {
