FIX Update Angular fix idea loading

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.1.2",
-    "@angular/cdk": "^16.1.5",
+    "@angular/cdk": "^18.1.2",
     "@angular/common": "^18.1.2",
     "@angular/compiler": "^18.1.2",
     "@angular/core": "^18.1.2",
@@ -24,7 +24,7 @@
     "@ngx-loading-bar/http-client": "^6.0.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "angularx-qrcode": "^17.0.1",
+    "angularx-qrcode": "^18.0.1",
     "autolinker": "^4.0.0",
     "config": "3.3.12",
     "easymde": "^2.16.1",
@@ -35,7 +35,7 @@
     "lodash": "4.17.21",
     "marked": "^5.1.2",
     "moment": "^2.30.1",
-    "ngx-cookie-service": "^17.1.0",
+    "ngx-cookie-service": "^18.0.0",
     "ngx-linky": "^4.0.0",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
@@ -51,7 +51,8 @@
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.2",
     "@types/jasmine": "~5.1.4",
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.14.12",
+    "@types/marked": "^5.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
