--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "qodana.projectId": "AOK69"
+    "qodana.projectId": "AOK69",
+    "cody.autocomplete.advanced.provider": "experimental-ollama",
+    "cody.autocomplete.experimental.ollamaOptions": {
+      "url": "http://localhost:11434",
+      "model": "codellama"
+    },
 }
