--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.1.2",
-    "@angular/cdk": "^18.1.2",
-    "@angular/common": "^18.1.2",
-    "@angular/compiler": "^18.1.2",
-    "@angular/core": "^18.1.2",
-    "@angular/forms": "^18.1.2",
-    "@angular/platform-browser": "^18.1.2",
-    "@angular/platform-browser-dynamic": "^18.1.2",
-    "@angular/router": "^18.1.2",
+    "@angular/animations": "^19.2.14",
+    "@angular/cdk": "^19.2.18",
+    "@angular/common": "^19.2.14",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
+    "@angular/forms": "^19.2.14",
+    "@angular/platform-browser": "^19.2.14",
+    "@angular/platform-browser-dynamic": "^19.2.14",
+    "@angular/router": "^19.2.14",
     "@ngx-loading-bar/core": "^6.0.2",
     "@ngx-loading-bar/http-client": "^6.0.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@web-eid/web-eid-library": "^2.0.2",
-    "angularx-qrcode": "^18.0.1",
+    "angularx-qrcode": "^19.0.0",
     "autolinker": "^4.0.0",
     "config": "3.3.12",
     "easymde": "^2.16.1",
@@ -36,7 +36,7 @@
     "lodash": "4.17.21",
     "marked": "^5.1.2",
     "moment": "^2.30.1",
-    "ngx-cookie-service": "^18.0.0",
+    "ngx-cookie-service": "^19.1.2",
     "ngx-linky": "^4.0.0",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
@@ -46,15 +46,17 @@
     "timers": "^0.1.1",
     "tslib": "^2.6.3",
     "validator": "^13.12.0",
-    "zone.js": "~0.14.8"
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.2",
-    "@angular/cli": "^18.1.2",
-    "@angular/compiler-cli": "^18.1.2",
+    "@angular-devkit/build-angular": "^19.2.15",
+    "@angular/cli": "^19.2.15",
+    "@angular/compiler-cli": "^19.2.14",
+    "@types/gulp": "^4.0.17",
     "@types/jasmine": "~5.1.4",
     "@types/marked": "^5.0.0",
     "@types/node": "^20.14.12",
+    "gulp": "^5.0.1",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
