--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.0.4",
-    "@angular/cdk": "^19.2.18",
+    "@angular/cdk": "^20.0.3",
     "@angular/common": "^20.0.4",
     "@angular/compiler": "^20.0.4",
     "@angular/core": "^20.0.4",
@@ -20,23 +20,23 @@
     "@angular/platform-browser": "^20.0.4",
     "@angular/platform-browser-dynamic": "^20.0.4",
     "@angular/router": "^20.0.4",
-    "@ngx-loading-bar/core": "^6.0.2",
-    "@ngx-loading-bar/http-client": "^6.0.2",
-    "@ngx-translate/core": "^15.0.0",
-    "@ngx-translate/http-loader": "^8.0.0",
+    "@ngx-loading-bar/core": "^7.0.0",
+    "@ngx-loading-bar/http-client": "^7.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "@web-eid/web-eid-library": "^2.0.2",
-    "angularx-qrcode": "^19.0.0",
+    "angularx-qrcode": "^20.0.0",
     "autolinker": "^4.0.0",
-    "config": "3.3.12",
+    "config": "^4.0.0",
     "easymde": "^2.16.1",
-    "express": "^4.21.1",
-    "express-csp-header": "5.2.1",
+    "express": "^5.1.0",
+    "express-csp-header": "^6.1.0",
     "fast-json-patch": "^3.1.1",
     "hwcrypto-js": "0.0.13",
     "lodash": "4.17.21",
-    "marked": "^5.1.2",
+    "marked": "^15.0.12",
     "moment": "^2.30.1",
-    "ngx-cookie-service": "^19.1.2",
+    "ngx-cookie-service": "^20.0.1",
     "ngx-linky": "^4.0.0",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
@@ -55,9 +55,9 @@
     "@types/gulp": "^4.0.17",
     "@types/jasmine": "~5.1.4",
     "@types/marked": "^5.0.0",
-    "@types/node": "^20.14.12",
+    "@types/node": "^24.0.3",
     "gulp": "^5.0.1",
-    "jasmine-core": "~5.2.0",
+    "jasmine-core": "^5.8.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
@@ -70,7 +70,7 @@
     "hwcrypto-js": true
   },
   "engines": {
-    "node": "20.18.0",
-    "npm": "10.8.0"
+    "node": "20.19.0",
+    "npm": "10.8.2"
   }
 }
